# fatChecker

./: CMakeLists.txt  k.txt  main.cpp
headers/: Configs.h  Converter.h  DirParser.h  parsers.h  reader.h
sources/: DirParser.h  parsers.cpp  reader.cpp
